--- a/src/Lab03/Start/deploy/k8s/meatservice-deployment.yaml
+++ b/src/Lab03/Start/deploy/k8s/meatservice-deployment.yaml
@@ -19,7 +19,11 @@ spec:
     spec:
       containers:
       - name: meatservice
-        image: rdlk8s.azurecr.io/meatservice:v1
+        image: rdlk8s.azurecr.io/meatservice:lab03
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         env:
         - name: RABBITMQ__URL
-          value: dinky-wallaby-rabbitmq
+          value: my-rabbitmq
