--- a/src/Lab03/End/deploy/k8s/cheeseservice-deployment.yaml
+++ b/src/Lab03/End/deploy/k8s/cheeseservice-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: cheeseservice
-        image: rdlk8s.azurecr.io/cheeseservice:lab03
+        image: myrepository.azurecr.io/cheeseservice:lab03
         resources:
           limits:
             memory: "128Mi"
