--- a/src/Lab03/Start/deploy/k8s/sandwichmaker-deployment.yaml
+++ b/src/Lab03/Start/deploy/k8s/sandwichmaker-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+myrepositoryapiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sandwichmaker
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: sandwichmaker
-        image: rdlk8s.azurecr.io/sandwichmaker:lab03
+        image: myrepository.azurecr.io/sandwichmaker:lab03
         resources:
           limits:
             memory: "128Mi"
