--- a/src/Lab03/End/CheeseService/Dockerfile
+++ b/src/Lab03/End/CheeseService/Dockerfile
@@ -1,7 +1,7 @@
-FROM microsoft/dotnet:2.1-runtime AS base
+FROM mcr.microsoft.com/dotnet/core/runtime:3.0-buster-slim AS base
 WORKDIR /app
 
-FROM microsoft/dotnet:2.1-sdk AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
 COPY CheeseService/CheeseService.csproj CheeseService/
 COPY RabbitQueue/RabbitQueue.csproj RabbitQueue/
