--- a/src/Lab03/Start/Gateway/Dockerfile
+++ b/src/Lab03/Start/Gateway/Dockerfile
@@ -1,8 +1,8 @@
-FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM microsoft/dotnet:2.1-sdk AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
 COPY Gateway/Gateway.csproj Gateway/
 COPY RabbitQueue/RabbitQueue.csproj RabbitQueue/
