--- a/src/Lab03/End/docker-compose.yml
+++ b/src/Lab03/End/docker-compose.yml
@@ -7,62 +7,62 @@ networks:
 
 services:
   sandwichmaker:
-    image: ${DOCKER_REGISTRY-}sandwichmaker
+    image: sandwichmaker
     build:
       context: .
       dockerfile: SandwichMaker/Dockerfile
     environment: 
-      - RABBITMQ__URL=172.25.0.9
+      - RABBITMQ__URL=rabbitsandwich
       - RABBITMQ__USER
       - RABBITMQ__PASSWORD
 
   gateway:
-    image: ${DOCKER_REGISTRY-}gateway
+    image: gateway
     build:
       context: .
       dockerfile: Gateway/Dockerfile
     environment: 
-      - RABBITMQ__URL=172.25.0.9
+      - RABBITMQ__URL=rabbitsandwich
       - RABBITMQ__USER
       - RABBITMQ__PASSWORD
 
   meatservice:
-    image: ${DOCKER_REGISTRY-}meatservice
+    image: meatservice
     build:
       context: .
       dockerfile: MeatService/Dockerfile
     environment: 
-      - RABBITMQ__URL=172.25.0.9
+      - RABBITMQ__URL=rabbitsandwich
       - RABBITMQ__USER
       - RABBITMQ__PASSWORD
 
   breadservice:
-    image: ${DOCKER_REGISTRY-}breadservice
+    image: breadservice
     build:
       context: .
       dockerfile: BreadService/Dockerfile
     environment: 
-      - RABBITMQ__URL=172.25.0.9
+      - RABBITMQ__URL=rabbitsandwich
       - RABBITMQ__USER
       - RABBITMQ__PASSWORD
 
   cheeseservice:
-    image: ${DOCKER_REGISTRY-}cheeseservice
+    image: cheeseservice
     build:
       context: .
       dockerfile: CheeseService/Dockerfile
     environment: 
-      - RABBITMQ__URL=172.25.0.9
+      - RABBITMQ__URL=rabbitsandwich
       - RABBITMQ__USER
       - RABBITMQ__PASSWORD
 
   lettuceservice:
-    image: ${DOCKER_REGISTRY-}lettuceservice
+    image: lettuceservice
     build:
       context: .
       dockerfile: LettuceService/Dockerfile
     environment: 
-      - RABBITMQ__URL=172.25.0.9
+      - RABBITMQ__URL=rabbitsandwich
       - RABBITMQ__USER
       - RABBITMQ__PASSWORD
 
