Add UserSecretsId tag

--- a/src/Lab01/End/Gateway/Gateway/Gateway.csproj
+++ b/src/Lab01/End/Gateway/Gateway/Gateway.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>697d5738-10fc-401f-bc55-d36939036068</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
