Update for latest VS 2019

--- a/src/Lab03/End/docker-compose.yml
+++ b/src/Lab03/End/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - RABBITMQ__PASSWORD
 
   gateway:
-    image: ${DOCKER_REGISTRY}gateway
+    image: ${DOCKER_REGISTRY-}gateway
     build:
       context: .
       dockerfile: Gateway/Dockerfile
