--- a/src/Lab03/End/docker-compose.override.yml
+++ b/src/Lab03/End/docker-compose.override.yml
@@ -4,6 +4,10 @@ services:
   gateway:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - "8000:80"
-
+      - "80"
+      - "443"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
