Add usersecretsid to gateway project

--- a/src/Lab01/End/Gateway/Gateway/Gateway.csproj
+++ b/src/Lab01/End/Gateway/Gateway/Gateway.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>2e808f4a-4930-458c-90f8-778515ffb859</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
