Re-add docker-compose project

--- a/src/Lab03/End/Gateway/Gateway.csproj
+++ b/src/Lab03/End/Gateway/Gateway.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>2e808f4a-4930-458c-90f8-778515ffb859</UserSecretsId>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
